--- a/Draw/Controller/PrivateChat/ChatDetailCell~ipad.xib
+++ b/Draw/Controller/PrivateChat/ChatDetailCell~ipad.xib
@@ -43,10 +43,24 @@
 						<reference key="NSNextResponder" ref="558154623"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUIImageView" id="812585086">
+								<reference key="NSNextResponder" ref="930442953"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{17, 17}, {74, 76}}</string>
+								<reference key="NSSuperview" ref="930442953"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">user_picbg@2x.png</string>
+								</object>
+							</object>
 							<object class="IBUIView" id="107077930">
 								<reference key="NSNextResponder" ref="930442953"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{26, 20}, {70, 70}}</string>
+								<string key="NSFrame">{{19, 20}, {70, 70}}</string>
 								<reference key="NSSuperview" ref="930442953"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="976879235"/>
@@ -63,7 +77,7 @@
 							<object class="IBUIImageView" id="976879235">
 								<reference key="NSNextResponder" ref="930442953"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{102, 20}, {124, 70}}</string>
+								<string key="NSFrame">{{96, 20}, {124, 70}}</string>
 								<reference key="NSSuperview" ref="930442953"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="717741485"/>
@@ -71,44 +85,10 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 							</object>
-							<object class="IBUIButton" id="544503219">
-								<reference key="NSNextResponder" ref="930442953"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{430, 32}, {84, 72}}</string>
-								<reference key="NSSuperview" ref="930442953"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIOpaque">NO</bool>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<int key="IBUIContentHorizontalAlignment">0</int>
-								<int key="IBUIContentVerticalAlignment">0</int>
-								<object class="NSColor" key="IBUIHighlightedTitleColor" id="192707601">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MQA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
-								</object>
-								<object class="NSColor" key="IBUINormalTitleShadowColor">
-									<int key="NSColorSpace">3</int>
-									<bytes key="NSWhite">MC41AA</bytes>
-								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">2</int>
-									<int key="size">2</int>
-								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">18</double>
-									<int key="NSfFlags">16</int>
-								</object>
-							</object>
 							<object class="IBUIView" id="717741485">
 								<reference key="NSNextResponder" ref="930442953"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{102, 20}, {60, 60}}</string>
+								<string key="NSFrame">{{96, 20}, {60, 60}}</string>
 								<reference key="NSSuperview" ref="930442953"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1056682445"/>
@@ -123,7 +103,7 @@
 							<object class="IBUILabel" id="532184138">
 								<reference key="NSNextResponder" ref="930442953"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 96}, {88, 32}}</string>
+								<string key="NSFrame">{{13, 96}, {88, 32}}</string>
 								<reference key="NSSuperview" ref="930442953"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1057570830"/>
@@ -138,7 +118,10 @@
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
-								<reference key="IBUIHighlightedColor" ref="192707601"/>
+								<object class="NSColor" key="IBUIHighlightedColor" id="192707601">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MQA</bytes>
+								</object>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
@@ -156,7 +139,7 @@
 							<object class="IBUILabel" id="1057570830">
 								<reference key="NSNextResponder" ref="930442953"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{106, 96}, {266, 32}}</string>
+								<string key="NSFrame">{{102, 96}, {266, 32}}</string>
 								<reference key="NSSuperview" ref="930442953"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="544503219"/>
@@ -184,7 +167,7 @@
 							<object class="IBUITextView" id="1056682445">
 								<reference key="NSNextResponder" ref="930442953"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{102, 20}, {108, 70}}</string>
+								<string key="NSFrame">{{96, 20}, {108, 70}}</string>
 								<reference key="NSSuperview" ref="930442953"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="532184138"/>
@@ -212,8 +195,38 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
+							<object class="IBUIButton" id="544503219">
+								<reference key="NSNextResponder" ref="930442953"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{430, 32}, {84, 72}}</string>
+								<reference key="NSSuperview" ref="930442953"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<reference key="IBUIHighlightedTitleColor" ref="192707601"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
+								</object>
+								<object class="NSColor" key="IBUINormalTitleShadowColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MC41AA</bytes>
+								</object>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<int key="type">2</int>
+									<int key="size">2</int>
+								</object>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica-Bold</string>
+									<double key="NSSize">18</double>
+									<int key="NSfFlags">16</int>
+								</object>
+							</object>
 						</array>
-						<string key="NSFrameSize">{600, 119}</string>
+						<string key="NSFrameSize">{720, 119}</string>
 						<reference key="NSSuperview" ref="558154623"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="107077930"/>
@@ -229,7 +242,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{600, 120}</string>
+				<string key="NSFrameSize">{720, 120}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="930442953"/>
@@ -255,14 +268,6 @@
 						<reference key="destination" ref="976879235"/>
 					</object>
 					<int key="connectionID">19</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">enlargeButton</string>
-						<reference key="source" ref="558154623"/>
-						<reference key="destination" ref="544503219"/>
-					</object>
-					<int key="connectionID">20</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -296,6 +301,31 @@
 					</object>
 					<int key="connectionID">24</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">avatarBackgroundImageView</string>
+						<reference key="source" ref="558154623"/>
+						<reference key="destination" ref="812585086"/>
+					</object>
+					<int key="connectionID">27</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">enlargeButton</string>
+						<reference key="source" ref="558154623"/>
+						<reference key="destination" ref="544503219"/>
+					</object>
+					<int key="connectionID">32</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickEnlargeButton:</string>
+						<reference key="source" ref="544503219"/>
+						<reference key="destination" ref="558154623"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">31</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -322,11 +352,12 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="107077930"/>
 							<reference ref="976879235"/>
-							<reference ref="544503219"/>
 							<reference ref="717741485"/>
 							<reference ref="532184138"/>
 							<reference ref="1057570830"/>
 							<reference ref="1056682445"/>
+							<reference ref="544503219"/>
+							<reference ref="812585086"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -365,6 +396,11 @@
 						<reference key="object" ref="1056682445"/>
 						<reference key="parent" ref="558154623"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">25</int>
+						<reference key="object" ref="812585086"/>
+						<reference key="parent" ref="558154623"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -380,6 +416,7 @@
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">ChatDetailCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -387,7 +424,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">24</int>
+			<int key="maxID">32</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -406,6 +443,7 @@
 						</object>
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="avatarBackgroundImageView">UIImageView</string>
 						<string key="avatarView">HJManagedImageV</string>
 						<string key="bubbleImageView">UIImageView</string>
 						<string key="contentTextView">UITextView</string>
@@ -415,6 +453,10 @@
 						<string key="timeLabel">UILabel</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="avatarBackgroundImageView">
+							<string key="name">avatarBackgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="avatarView">
 							<string key="name">avatarView</string>
 							<string key="candidateClassName">HJManagedImageV</string>
@@ -483,6 +525,10 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="NS.key.0">user_picbg@2x.png</string>
+			<string key="NS.object.0">{142, 147}</string>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
