--- a/Draw/Controller/PrivateChat/ChatListController~ipad.xib
+++ b/Draw/Controller/PrivateChat/ChatListController~ipad.xib
@@ -107,7 +107,7 @@
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<bool key="IBUIAlwaysBounceVertical">YES</bool>
 						<int key="IBUISeparatorStyle">1</int>
-						<object class="NSColor" key="IBUISeparatorColor" id="102197941">
+						<object class="NSColor" key="IBUISeparatorColor" id="3809573">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
@@ -214,14 +214,14 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="49064455">
+					<object class="IBUILabel" id="364374590">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{104, 177}, {560, 120}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<reference key="IBUIBackgroundColor" ref="102197941"/>
+						<reference key="IBUIBackgroundColor" ref="3809573"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -299,6 +299,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">tipsLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="364374590"/>
+					</object>
+					<int key="connectionID">22</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="736073514"/>
 						<reference key="destination" ref="372490531"/>
@@ -352,7 +360,7 @@
 							<reference ref="736073514"/>
 							<reference ref="484983689"/>
 							<reference ref="426082216"/>
-							<reference ref="49064455"/>
+							<reference ref="364374590"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -410,7 +418,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
-						<reference key="object" ref="49064455"/>
+						<reference key="object" ref="364374590"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -435,7 +443,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">21</int>
+			<int key="maxID">22</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
